--- a/www/songbird/src/AppBundle/Resources/translations/app.en.xlf
+++ b/www/songbird/src/AppBundle/Resources/translations/app.en.xlf
@@ -14,6 +14,22 @@
                 <source>admin.link.my_profile</source>
                 <target>My Profile</target>
             </trans-unit>
+            <trans-unit id="4">
+                <source>admin.link.media_management</source>
+                <target>Media Management</target>
+            </trans-unit>
+            <trans-unit id="5">
+                <source>admin.link.gallery_management</source>
+                <target>Gallery Management</target>
+            </trans-unit>
+            <trans-unit id="6">
+                <source>admin.title.galleries</source>
+                <target>Galleries</target>
+            </trans-unit>
+            <trans-unit id="7">
+                <source>admin.title.options</source>
+                <target>Options</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
