--- a/www/songbird/src/AppBundle/Resources/translations/app.fr.xlf
+++ b/www/songbird/src/AppBundle/Resources/translations/app.fr.xlf
@@ -30,6 +30,10 @@
                 <source>admin.title.options</source>
                 <target>les options</target>
             </trans-unit>
+            <trans-unit id="8">
+                <source>admin.link.user_log</source>
+                <target>Connexion utilisateur</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
